# snowbox

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/snowbox/: __init__.py  __main__.py  connector.py  context.py  server.py
tests/: test_connector.py  test_context.py  test_server.py
